--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const objectid = urlParams.get('objectid');
+    const objectid = urlParams.get('Municipality');
 
     const featureServiceURL = 'https://services6.arcgis.com/euKKjtGUuDiy24vy/arcgis/rest/services/MunicipalitiesByCommunityType/FeatureServer;
 
