--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     const map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
-      center: [-71.0589, 42.3601], // Example: Boston
-      zoom: 10
+      center: [-71.245, 42.254],  // Your preferred coordinates (lng, lat)
+      zoom: 8.8                   // Your preferred zoom
     });
 
     map.on('load', () => {
