--- a/map_with_button.html
+++ b/map_with_button.html
@@ -76,7 +76,7 @@
       zoom: 8.0
     });
 
-    const layerId = 'municipalitiesbycommunitytype-c8ks3h';
+    const layerId = 'municipalitiesbycommunitytype-c8ks3h copy';
 
     function toggleLayer() {
       if (!map.getLayer(layerId)) {
