--- a/map_with_button.html
+++ b/map_with_button.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Map + Toggle & Home Button</title>
+  <title>Map with Toggle & Home Button</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Fonts: Roboto Bold + Material Icons -->
+  <!-- Roboto + Material Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -27,7 +27,7 @@
       width: 100%;
     }
 
-    /* 🔘 Centered gradient bar with toggle button */
+    /* Top center gradient bar */
     .top-bar {
       position: absolute;
       top: 0;
@@ -54,14 +54,13 @@
       cursor: pointer;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
       backdrop-filter: blur(4px);
-      transition: background-color 0.2s ease;
     }
 
     #toggleMapboxLayer:hover {
       background-color: rgba(255, 255, 255, 1);
     }
 
-    /* 🏠 Top-left home button */
+    /* Home button in top left */
     #homeButton {
       position: absolute;
       top: 10px;
@@ -75,9 +74,6 @@
       cursor: pointer;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
       backdrop-filter: blur(4px);
-      transition: background-color 0.2s ease;
-      display: flex;
-      align-items: center;
     }
 
     #homeButton:hover {
@@ -85,22 +81,21 @@
     }
 
     .material-icons {
-      font-size: 20px;
+      font-size: 24px;
     }
   </style>
 </head>
 <body>
-  <!-- 🏠 Home Button -->
+  <!-- Home icon-only button -->
   <button id="homeButton" title="Return to Default View">
     <span class="material-icons">home</span>
   </button>
 
-  <!-- 🔘 Centered Gradient Toggle Bar -->
+  <!-- Centered toggle button bar -->
   <div class="top-bar">
     <button id="toggleMapboxLayer">Toggle Municipalities Layer</button>
   </div>
 
-  <!-- 🗺️ Map Container -->
   <div id="map"></div>
 
   <script>
@@ -109,13 +104,20 @@
     const defaultCenter = [-71.245, 42.254];
     const defaultZoom = 8.0;
 
+    // Define panning boundaries (adjust to match your actual map frame area)
+    const bounds = [
+      [-72.5, 41.5], // Southwest corner
+      [-69.5, 43.0]  // Northeast corner
+    ];
+
     const map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
       center: defaultCenter,
       zoom: defaultZoom,
       minZoom: defaultZoom,
-      maxZoom: 22
+      maxZoom: 22,
+      maxBounds: bounds // 🔒 Lock to these bounds
     });
 
     const layerId = 'municipalitiesbycommunitytype-c8ks3h copy';
@@ -141,7 +143,8 @@
         map.flyTo({
           center: defaultCenter,
           zoom: defaultZoom,
-          speed: 1.2
+          speed: 1.2,
+          essential: true
         });
       });
     });
