--- a/map_with_button.html
+++ b/map_with_button.html
@@ -161,7 +161,7 @@
         const searchName = event.data.name.trim().toLowerCase();
 
         const features = map.querySourceFeatures('composite', {
-          sourceLayer: 'MunicipalitiesByCommunityType-c8ks3h'
+          sourceLayer: 'MunicipalitiesByCommunityType-c8ks3h copy'
         });
 
         const match = features.find(f =>
