--- a/search.html
+++ b/search.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Town Search Widget</title>
+  <title>Search Town Widget</title>
   <style>
     body {
       font-family: Roboto, sans-serif;
       margin: 10px;
     }
+
     input, button {
       font-size: 16px;
       padding: 6px 10px;
@@ -22,16 +23,11 @@
   <script>
     function sendTown() {
       const town = document.getElementById("townName").value.trim().toLowerCase();
-      const mapIframe = parent.document.getElementById("mapboxFrame");
-      if (mapIframe && mapIframe.contentWindow) {
-        console.log("📤 Sending search-town message:", town);
-        mapIframe.contentWindow.postMessage({
-          type: 'search-town',
-          name: town
-        }, '*');
-      } else {
-        console.warn("❌ Map iframe not found.");
-      }
+      window.parent.postMessage({
+        type: 'search-town',
+        name: town
+      }, '*');
+      console.log("📤 Sent search-town:", town);
     }
   </script>
 </body>
