--- a/map_with_button.html
+++ b/map_with_button.html
@@ -159,7 +159,7 @@
         const searchName = event.data.name.trim().toLowerCase();
 
         const features = map.querySourceFeatures('composite', {
-          sourceLayer: 'MunicipalitiesByCommunityType-c8ks3h copy'
+          sourceLayer: 'MunicipalitiesByCommunityType-C8ks3h'
         });
 
         const match = features.find(f =>
